# non_cooperative_aerial_base_station_placement

./: .gitignore  README.md  pixi.toml  pyproject.toml
examples/: example.ipynb  example.py
matlab/: README.md
python/: example.py  requirements.txt  setup.py
python/uav_placement/: __init__.py  cli.py
python/uav_placement/core/: __init__.py  aerial_base_station.py  placement_simulator.py
python/uav_placement/optimization/: __init__.py
python/uav_placement/utils/: __init__.py
uav_placement/: README.md
uav_placement.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
uav_placement/core/: aerial_base_station.py  channel.py  mobile_user.py  placement_simulator.py
uav_placement/optimization/: optimizer.py
uav_placement/tests/: __init__.py  test_uav_placement.py
